--- a/CSS/markingCP.css
+++ b/CSS/markingCP.css
@@ -1,8 +1,11 @@
+body{
+    margin: 0%;
+}
 #marking
 {
     z-index:1;
     display: grid;
-    z-index: 0;
+    padding: 0%;
     grid-template-areas: "TopPanel"
                          "Find"
                          "Cards";
