--- a/CSS/markingCP.css
+++ b/CSS/markingCP.css
@@ -10,3 +10,8 @@ body{
                          "Find"
                          "Cards";
 }
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
