--- a/CSS/backgroundCP.css
+++ b/CSS/backgroundCP.css
@@ -4,6 +4,6 @@
     position: fixed;
     width: 100%;
     height: 100%;
-    background: rgb(221,237,240);
-    background: radial-gradient(circle, rgba(221,237,240,1) 23%, rgba(31,100,150,1) 88%);
+    background: rgb(253,29,29);
+    background: linear-gradient(45deg, rgba(253,29,29,0.7259278711484594) 0%, rgba(131,58,180,0.7371323529411764) 48%, rgba(252,136,69,0.7819502801120448) 100%);
 }
