--- a/CSS/cards.css
+++ b/CSS/cards.css
@@ -6,10 +6,10 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
     justify-items: center;
-
   }
 
-.project{
+.project
+{
     cursor: pointer;
     display: grid;
     justify-items: center;
@@ -23,7 +23,8 @@
 }
 
 .front,
-.back{
+.back
+{
     grid-area: A;
     width: 100%;
     height: 100%;
@@ -34,25 +35,30 @@
     backdrop-filter: blur(5px);
 }
 
-.front{
+.front
+{
     transform: perspective(600px) rotateY(0deg);
     margin: 5px;
 }
 
-.back{
+.back
+{
     transform: perspective(600px) rotateY(180deg);
     margin: 5px;
 }
 
-.backСontent{
+.backСontent
+{
     width: 100%;
     text-align: center;
 }
 
-.project:hover > .front{
+.project:hover > .front
+{
     transform: perspective(600px) rotateY(-180deg);
 }
 
-.project:hover > .back{
+.project:hover > .back
+{
     transform: perspective(600px) rotateY(0deg);
 }
