--- a/CSS/find.css
+++ b/CSS/find.css
@@ -1,6 +1,9 @@
 #find
 {
     grid-area: Find;
-    height: 8vh;
     margin: 1% 15% 0%;
+    display: flex;
+    width: 70%;
+    height: 8vh;
+    border: none;
 }
