--- a/CSS/markingCP.css
+++ b/CSS/markingCP.css
@@ -1,4 +1,5 @@
-body{
+body
+{
     margin: 0%;
 }
 #marking
@@ -11,7 +12,8 @@ body{
                          "Cards";
 }
 
-a{
+a
+{
     text-decoration: none;
     color: inherit;
 }
