--- a/CSS/topPanelCP.css
+++ b/CSS/topPanelCP.css
@@ -1,4 +1,5 @@
-#topPanel{
+#topPanel
+{
     z-index:1;
     display: flex;
     grid-area: TopPanel;
@@ -7,6 +8,7 @@
     padding-left: 10px;
 }
 
-.button{
+.button
+{
     margin-right: 3vw;
 }
