--- a/CSS/cards.css
+++ b/CSS/cards.css
@@ -13,6 +13,7 @@
     cursor: pointer;
     display: grid;
     justify-items: center;
+    position: relative;
     grid-template-areas: "A";
     align-items:center;
     text-align: center;
@@ -26,6 +27,9 @@
 .back
 {
     grid-area: A;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
@@ -37,6 +41,7 @@
 
 .front
 {
+    vertical-align: middle;
     transform: perspective(600px) rotateY(0deg);
     margin: 5px;
 }
@@ -51,6 +56,7 @@
 {
     width: 100%;
     text-align: center;
+    top: 50%;
 }
 
 .project:hover > .front
