--- a/CSS/find.css
+++ b/CSS/find.css
@@ -3,4 +3,10 @@
     grid-area: Find;
     height: 8vh;
     margin: 1% 15% 0%;
+
+    animation-name: ascent;
+    animation-duration: 4s;
+    transition: 2.5s;
+    animation-iteration-count: infinite;
 }
+  
