--- a/CSS/previewMP.css
+++ b/CSS/previewMP.css
@@ -1,8 +1,3 @@
-:root
-{
-  --fontSize: calc(1vh + 1vw);
-}
-
 #title
 {
   display: block;
@@ -29,10 +24,9 @@
 
   justify-content: center;
   align-items: center;
+  user-select: none;
 
-  font-family: 'Monospace', 'Courier New', 'Courier';
-  font-size: calc(var(--fontSize) * 2.5);
-  font-weight: bold;
+  /*#TODO Подумать насчет всплытия*/
 }
 
 .blink 
