--- a/CSS/cards.css
+++ b/CSS/cards.css
@@ -30,12 +30,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    line-height: 5vh;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
     transition: transform .6s linear;
     box-shadow: 0px 0px 26px -4px #555555;
     border-radius: 25px;
+    background-color: rgb(245, 245, 245, 0.125);
     backdrop-filter: blur(5px);
 }
 
