--- a/CSS/btn.css
+++ b/CSS/btn.css
@@ -3,7 +3,9 @@ button
     position: relative;
     bottom: 5%;
     height: 4.5vh;
-    width: 90%;
+
+    /* TODO: Ширина мешает нормально сделать кнопки в navBar*/
+    /*width: 90%;*/
     margin-left: 5%;
     background-color: #fff;
     border-radius: 17px;
