--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -5,12 +5,22 @@ nav
     grid-area: TopPanel;
     align-items: center;
     justify-content: baseline;
-    padding: 1%;
-    /*TODO Сделать нормальный отступ*/
+    padding: 1% 1% 0%;
+    margin: -2% 2% 0%;
+    
+    box-shadow: 0px 0px 26px -4px #555555;
+    border-radius: 0px 0px 25px 25px;
+    backdrop-filter: blur(5px);
 }
 
 nav button
 {
-    width: 25%;
-    margin-top: 3%;
+    margin: 3% 1.5% 0%;
+    padding: 0.5% 1%;
+    height: 40%;
+}
+
+nav #title
+{
+    min-width: 100px;
 }
