--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -6,11 +6,15 @@ nav
     align-items: center;
     justify-content: baseline;
     padding: 1% 1% 0%;
-    margin: -2% 2% 0%;
+    margin: -2% 2% 2%;
     
     box-shadow: 0px 0px 26px -4px #555555;
     border-radius: 0px 0px 25px 25px;
     backdrop-filter: blur(5px);
+
+    animation-name: ascent;
+    animation-duration: 2s;
+    transition: 3s;
 }
 
 nav button
@@ -20,7 +24,15 @@ nav button
     height: 40%;
 }
 
-nav #title
+@keyframes ascent
 {
-    min-width: 100px;
+    from 
+    {
+      opacity: 0;
+      transform: translateY(-50px);
+    }
+    to 
+    {
+        opacity: 1;
+    }
 }
