upd background, add gradient background

--- a/CSS/markingMP.css
+++ b/CSS/markingMP.css
@@ -1,7 +1,11 @@
+body
+{
+    margin: 0%;
+}
+
 #marking
 {
     display: grid;
-    margin: 0% -1% 0%;
     grid-template-areas: 'Preview'
                          'Find'
                          'Cards';
