--- a/CSS/background.css
+++ b/CSS/background.css
@@ -2,8 +2,8 @@
 {
     display: block;
     position: fixed;
-    
-    top: 0px;
     width: 100%;
     height: 100%;
+
+    background-color: rgb(245, 245, 245);
 }
