--- a/CSS/navBar.css
+++ b/CSS/navBar.css
@@ -11,6 +11,8 @@ nav
     box-shadow: 0px 0px 26px -4px #555555;
     border-radius: 0px 0px 25px 25px;
     backdrop-filter: blur(5px);
+    /* TODO: Для теста заднего фона */
+    background: radial-gradient(rgba(255, 255, 255, 0.8), rgba(100, 100, 100, 0.05));
 
     animation-name: ascent;
     animation-duration: 2s;
