--- a/CSS/scrollCinema.css
+++ b/CSS/scrollCinema.css
@@ -10,9 +10,9 @@
 {
     --index: calc(1vh + 1vw);
     --gutter: 30px;
-    --sideSmall: 26;
-    --sideBig: 36;
-    --depth: 4000px;
+    --sideSmall: 46;
+    --sideBig: 56;
+    --depth: 5500px;
     --transition: .75s cubic-bezier(.085, .590, 0, 1);
     --transitionText: .75s cubic-bezier(0.790, 0.090, 0.585, 0.425);
 }
@@ -27,8 +27,15 @@ body
     height: var(--depth);
 }
 
+nav
+{
+    z-index: 1;
+}
+
 .container
 {
+    z-index: 0;
+    bottom: calc(var(--fontSize));
     width: 100%;
     height: 100%;
     position: fixed;
@@ -116,14 +123,14 @@ h1, h2, h3, h4
 {
     position: relative;
     text-align: center;
-    width: calc(var(--index) * 30);
+    width: calc(var(--index) * 35);
 }
 
 .textLeft > *
 {
     position: relative;
     text-align: center;
-    width: calc(var(--index) * 30);
+    width: calc(var(--index) * 35);
 }
 
 .frame h3
