--- a/CSS/cards.css
+++ b/CSS/cards.css
@@ -1,7 +1,13 @@
+:root
+{
+    --sideSmall: 16;
+    --sideBig: 26;
+}
+
 .projectsSpace {
     display: grid;
     grid-area: Cards;
-    gap: 6%;
+    gap: 8%;
     margin-top: 4%;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr);
@@ -18,7 +24,8 @@
     align-items:center;
     text-align: center;
     width: 90%;
-    height: 40vh;
+    /* TODO Придумать вычисление размерности карточек */
+    height: 50vh;
     margin: 3%;
     min-width: 10vw;
 }
@@ -46,6 +53,15 @@
     vertical-align: middle;
     transform: perspective(600px) rotateY(0deg);
     margin: 5px;
+}
+
+.frontMedia
+{
+    height:70%;
+    width: 70%;
+    padding-left: 15%;
+    padding-top: 5%;
+    padding-bottom: 5%;
 }
 
 .back
