fix card name and upd bg

--- a/CSS/cards.css
+++ b/CSS/cards.css
@@ -1,4 +1,5 @@
-.projectsSpace {
+.projectsSpace 
+{
     display: grid;
     grid-area: Cards;
     gap: 6%;
@@ -23,8 +24,7 @@
     min-width: 10vw;
 }
 
-.front,
-.back
+.front, .back
 {
     grid-area: A;
     display: flex;
@@ -39,6 +39,7 @@
     border-radius: 25px;
     background-color: rgb(245, 245, 245, 0.125);
     backdrop-filter: blur(5px);
+    background: radial-gradient(rgba(255, 255, 255, 0.8), rgba(100, 100, 100, 0.05));
 }
 
 .front
