--- a/CSS/subV3.css
+++ b/CSS/subV3.css
@@ -14,7 +14,7 @@ input
     position: absolute;
     top: calc(5 * var(--index));
     justify-self: center;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     perspective: 1500px;
     padding: calc(var(--index));
@@ -27,49 +27,78 @@ input
                          'Description SubNeeds SubNeeds'
                          'BackBtn Subscribe NextBtn';
     text-align: center;
-    border-radius: 25px;
-    background-color: rgb(245, 245, 245, 0.125);
-    box-shadow: 0px 0px 26px -4px #555555;
+    column-gap: 5%;
+    row-gap: 2%;
 }
 
 .subName
 {
     grid-area: Name;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(245, 245, 245, 0.125);
+    box-shadow: 0px 0px 26px -4px #555555;
+    border-radius: 25px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    gap: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 .subDescription
 {
     grid-area: Description;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(245, 245, 245, 0.125);
+    box-shadow: 0px 0px 26px -4px #555555;
+    border-radius: 25px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    gap: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 .subNeeds
 {
     grid-area: SubNeeds;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(245, 245, 245, 0.125);
+    box-shadow: 0px 0px 26px -4px #555555;
+    border-radius: 25px;
     display: flex;
     flex-flow: column;
+    justify-content: center;
     gap: 2%;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 .nextBtn
 {
     grid-area: NextBtn;
-    margin-right: calc(var(--index));
-    margin-left: calc(2 * var(--index));
-    bottom: calc(-2 * var(--index));
+    margin-right: 0;
+    margin-left: calc(var(--index));
+    bottom: calc(-1 * var(--index));
 }
 
 .backBtn
 {
     grid-area: BackBtn;
-    margin-left: calc(var(--index));;
-    margin-right: calc(2 * var(--index));
-    bottom: calc(-2 * var(--index));
+    margin-left: 0;
+    margin-right: calc(var(--index));
+    bottom: calc(-1 * var(--index));
 }
 
 .subscribeBtn
 {
     grid-area: Subscribe;
     margin: 0;
-    bottom: calc(-2 * var(--index));
+    bottom: calc(-1 * var(--index));
 }
 
