--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -22,6 +22,7 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
+	<canvas id="background" width="800" height="600"></canvas>
 	<div id="preview">
 		<canvas id="vortex" width="800" height="300"  style="background-color: white;"></canvas>
 		<div id="title">Проекты ЧелГУ.</div>
