--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -31,14 +31,14 @@
 	<input class="blurContainer" id="find" placeholder="Введите название проекта">
 
 	<div class="projectsSpace mainFont">
-		{% for card in cards%}
-		<a class="project" href="{{card.url}}">
+		{% for project in projects%}
+		<a class="project" href="{{project.url}}"> <!--TODO Переделать ссылки-->
 			<div class="front hFont">
 				<img class="frontMedia" src={% static '/src/img/project_preview.jpg' %}>
-				<div class="frontText">{{card.name}}</div>
+				<div class="frontText">{{project.project_name}}</div>
 			</div>
 			<div class="back">
-				<div class="backContent mFont">{{card.content}}</div>
+				<div class="backContent mFont">{{project.project_description}}</div>
 			</div>
 		</a>
 		{% endfor %}
