--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% block title %} Главная {% endblock title %}
-
 {% block cssAndScripts %}
     {% load static%}
 
@@ -32,9 +31,9 @@
 
 	<div class="projectsSpace mainFont">
 		{% for project in projects%}
-		<a class="project" href="{{project.url}}"> <!--TODO Переделать ссылки-->
+		<a class="project" href="{{project.project_id}}"> <!--TODO Переделать ссылки-->
 			<div class="front hFont">
-				<img class="frontMedia" src={% static '/src/img/project_preview.jpg' %}>
+				<img class="frontMedia" src= {{project.project_preview.url}}>
 				<div class="frontText">{{project.project_name}}</div>
 			</div>
 			<div class="back">
