--- a/Django/CSUProjects/templates/cinema.html
+++ b/Django/CSUProjects/templates/cinema.html
@@ -15,9 +15,9 @@
 
 {% block content %}
     <nav>
-        <a id="title" class="button" href="{% url 'main' %}">Проекты ЧелГУ.</a>
-        <button id="completedProjects" class="button blurContainer mFont" ><a href="{% url 'main' %}">Главная</a></button>
-        <button id="completedProjects" class="button blurContainer mFont" ><a href="completedProjects">Выполненные проекты</a></button>
+        <a id="title" class="button" href={% url 'main' %}>Проекты ЧелГУ.</a>
+        <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'main' %}>Главная</a></button>
+        <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'completedProjects' %}>Выполненные проекты</a></button>
     </nav>
 
     <div class="container">
