--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -23,18 +23,18 @@
     <div id="marking">
         <nav>
             <a id="title" class="button" href={% url 'main' %}>Проекты ЧелГУ.</a>
-            <button id="completedProjects" class="button blurContainer mFont" ><a href="/">Главная</a></button>
-            <button id="completedProjects" class="button blurContainer mFont" ><a href="completedProjects">Выполненные проекты</a></button>
+            <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'main' %}>Главная</a></button>
+            <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'completedProjects' %}>Выполненные проекты</a></button>
         </nav>
 
         <div class="projectsSpace">
-            {% for project in projects %}
+            {% for card in cards %}
             <div class="project">
-                <div class="front hFont">{{project.subproject_name}}</div>
+                <div class="front hFont">{{card.subproject_name}}</div>
                 <div class="back">
                     <div class="backContent">
                         <div class="backContentText mFont">
-                            {{project.subproject_description}}
+                            {{card.subproject_description}}
                         </div>
                         <button class="subscribeButton">
                             <div>Записаться</div>
