upd: form subscribe, fonts

--- a/Django/CSUProjects/static/css/fonts.css
+++ b/Django/CSUProjects/static/css/fonts.css
@@ -2,21 +2,23 @@
 {
     --fontSize: calc(1vh + 1vw);
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap');
 #title, .hFont, .hmFont, .mFont, .smFont, #find::placeholder, input, textarea, button
 {
-    font-family: 'Monospace', 'Courier', 'Courier New';
+    font-family: 'Montserrat', 'Monospace', 'Courier New';
 }
 
 #title
 {
-    font-weight: bold;
+    font-weight: 600;
+    font-style: italic;
     font-size: calc(var(--fontSize) * 2.5);
 }
 
 .hFont
 {
-    font-weight: lighter;
+    font-weight: 500;
+    font-style: italic;
     font-size: calc(var(--fontSize) * 1.7);
 }
 
@@ -28,7 +30,7 @@
 
 .mFont, #find::placeholder, input, textarea, button
 {
-    font-weight: lighter;
+    font-weight: 300;
     font-size: calc(var(--fontSize));
 }
 
