--- a/Django/CSUProjects/static/css/subscriptionForm.css
+++ b/Django/CSUProjects/static/css/subscriptionForm.css
@@ -11,14 +11,14 @@ body
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url('back.jpg') no-repeat;
     background-size: cover;
     background-position: center;
 }
 
 .wrapper
 {
-    position: relative;
+    position: fixed;
+    top: 10%;
     width: 450px;
     height: 600px;
     background: transparent;
@@ -32,6 +32,7 @@ body
     overflow: hidden;
     transform: scale(0);
     transition: transform .3s ease;
+    z-index: 1;
 }
 
 .wrapper.active-appear
@@ -119,8 +120,9 @@ body
     line-height: 57px;
 }
 
-.btn
+.submit-button
 {
+    margin-left: -2px;
     width: 100%;
     height: 45px;
     background: #162938;
