--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -28,7 +28,7 @@
     <div id="marking">
         <nav>
             <a id="title" class="button" href={% url 'main' %}>Проекты ЧелГУ.</a>
-            <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'main' %}>Главная</a></button>
+            <button id="main" class="button blurContainer mFont" ><a href={% url 'main' %}>Главная</a></button>
             <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'completedProjects' %}>Выполненные проекты</a></button>
         </nav>
 
