--- a/Django/CSUProjects/static/css/find.css
+++ b/Django/CSUProjects/static/css/find.css
@@ -1,20 +1,23 @@
 #find
 {
+    position: relative;
     display: flex;
     width: 70%;
-    border: none;
-    grid-area: Find;
-    margin: 1% 15% 0%;
     padding: 1%;
+    outline: none;
+    border: none;
+    justify-content: center;
+    align-items: center;
 
     box-shadow: 0px 0px 26px -4px #555555;
-    border-radius: 25px;
+    border-radius: 15px;
     backdrop-filter: blur(5px);
     margin-bottom: 2%;
 
     animation-name: ascent;
     animation-duration: 6s;
     transition: 6s;
+
 }
 
 @keyframes ascent
