--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -9,6 +9,9 @@
 	<script type="text/javascript" src={% static "/src/JScripts/backgroundAnimation/B_constants.js" %} defer></script>
 	<script type="text/javascript" src={% static "/src/JScripts/backgroundAnimation/B_canvas_settings.js" %} defer></script>
 	<script type="text/javascript" src={% static "/src/JScripts/backgroundAnimation/B_engine.js" %} defer></script>
+	<script type="text/javascript" src={% static "/src/JScripts/showSubscriptionForm.js" %} defer> </script>
+	<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
 
 	<link rel="stylesheet" href={% static "/css/markingMP.css" %}>
 	<link rel="stylesheet" href={% static "/css/background.css" %}>
@@ -17,21 +20,28 @@
 	<link rel="stylesheet" href={% static "/css/find.css" %}>
 	<link rel="stylesheet" href={% static "/css/fonts.css" %}>
     <link rel="stylesheet" href={% static "/css/cards.css" %}>
+	<link rel="stylesheet" href={% static "/css/btn.css" %}>
+	<link rel="stylesheet" href={% static "/css/subscriptionForm.css" %}>
 
 {% endblock cssAndScripts %}
 
 {% block content %}
 	<canvas id="background" width="800" height="600"></canvas>
-	<div id="preview">
+	<section id="preview">
 		<canvas id="vortex" width="800" height="300"  style="background-color: white;"></canvas>
 		<div id="title">Проекты ЧелГУ.</div>
-	</div>
+	</section>
 
 	<input class="blurContainer" id="find" placeholder="Введите название проекта">
 
-	<div class="projectsSpace mainFont">
+	<section id="buttons">
+		<button id="completed-projects"><a href={% url 'completedProjects' %}>Выполненные проекты</a></button>
+		<button id="create-project">Предложить проект</button>
+	</section>
+
+	<section id="projectsSpace hFont">
 		{% for card in cards%}
-		<a class="project" href="subProjects/{{card.project_id}}"> <!--TODO Переделать ссылки-->
+		<a class="project" href="subProjects/{{card.project_id}}">
 			<div class="front hFont">
 			{% if card.mediaExists %}
 				<img class="frontMedia" src= {{card.project_preview.url}}>
@@ -43,5 +53,42 @@
 			</div>
 		</a>
 		{% endfor %}
-	</div>
+	</section>
+
+	<div class="wrapper">
+        <span class="icon-close">
+            <ion-icon name="close"></ion-icon>
+        </span>
+        <div class="form-box login">
+            <h2>Предложить проект</h2>
+            <form action="#">
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
+                    <input type="text" required>
+                    <label for="">Название</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Название организации</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Кто необходим</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail-open"></ion-icon></span>
+                    <input type="email" required>
+                    <label>Почта</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail-open"></ion-icon></span>
+                    <input type="text" required>
+                    <label>Описание проекта</label>
+                </div>
+                <button type="submit" class="submit-button" >Предложить</button>
+            </form>
+        </div>
+    </div>
 {% endblock content %}
