--- a/Django/CSUProjects/static/css/markingMP.css
+++ b/Django/CSUProjects/static/css/markingMP.css
@@ -21,12 +21,19 @@ section
     width: 100%;
     display: flex;
     position: relative;
-    justify-content: space-evenly;
+    
 }
 
-section #buttons button
+#projectsSpace
+{
+    margin: 50%;
+}
+
+
+#buttons
 {
     align-items: center;
+    justify-content: space-evenly;
 }
 
 a
