--- a/Django/CSUProjects/templates/index.html
+++ b/Django/CSUProjects/templates/index.html
@@ -65,7 +65,7 @@
                 <div class="input-box">
                     <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
                     <input type="text" required>
-                    <label for="">Название</label>
+                    <label>Название</label>
                 </div>
                 <div class="input-box">
                     <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
