--- a/Django/CSUProjects/static/css/background.css
+++ b/Django/CSUProjects/static/css/background.css
@@ -1,9 +1,8 @@
 #background
 {
-    display: block;
+    display: flexbox;
     position: fixed;
     width: 100%;
     height: 100%;
-
     background-color: rgb(245, 245, 245);
 }
