--- a/Django/CSUProjects/static/css/find.css
+++ b/Django/CSUProjects/static/css/find.css
@@ -1,4 +1,4 @@
-#find
+#find-style-1, #find-style-2
 {
     position: relative;
     display: flex;
@@ -9,26 +9,36 @@
     justify-content: center;
     align-items: center;
 
-    box-shadow: 0px 0px 26px -4px #555555;
+    box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     border-radius: 15px;
     backdrop-filter: blur(5px);
     margin-bottom: 2%;
 
     animation-name: ascent;
-    animation-duration: 6s;
-    transition: 6s;
+    animation-duration: .5s;
+    transition: 1.5s ease;
 
 }
 
+#find-style-1
+{
+    margin-top: 4%;
+}
+
+#find-style-2
+{
+    margin-top: 9%;
+}
 @keyframes ascent
 {
     from 
     {
-      opacity: 0;
-      transform: translateY(-50px);
+      scale: 0;
+      box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
     }
     to 
     {
-        opacity: 1;
+        scale: 1;
+        box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
     }
 }
