--- a/Django/CSUProjects/static/css/navBar.css
+++ b/Django/CSUProjects/static/css/navBar.css
@@ -1,39 +1,37 @@
-nav
+.logo
 {
-    display: flex;
+    color: #000000;
+    user-select: none;
+    font-size: 2.5em;
+    font-style: italic;
+}
+
+nav a
+{
     position: relative;
-    grid-area: TopPanel;
-    align-items: center;
-    justify-content: baseline;
-    padding: 1% 1% 0%;
-    margin: -2% 2% 2%;
-    
-    box-shadow: 0px 0px 26px -4px #555555;
-    border-radius: 0px 0px 25px 25px;
-    backdrop-filter: blur(5px);
-    background: radial-gradient(rgba(255, 255, 255, 0.8), rgba(100, 100, 100, 0.05));
-
-    animation-name: ascent;
-    animation-duration: 2s;
-    transition: 3s;
+    font-size: 1.2em;
+    color: #000000;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 40px;
 }
 
-nav button
+nav a::after
 {
-    margin: 3% 1.5% 0%;
-    padding: 0.5% 1%;
-    height: 40%;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background: #000000;
+    border-radius: 5px;
+    left: 0;
+    bottom: -6px;
+    transform: scaleX(0);
+    transition: transform .5s ease;
 }
 
-@keyframes ascent
+nav a:hover::after
 {
-    from 
-    {
-      opacity: 0;
-      transform: translateY(-50px);
-    }
-    to 
-    {
-        opacity: 1;
-    }
+    transform-origin: left;
+    transform: scaleX(1);
 }
