--- a/Django/CSUProjects/templates/completedProjects.html
+++ b/Django/CSUProjects/templates/completedProjects.html
@@ -5,11 +5,8 @@
     {% load static%}
 
     <script type="text/javascript" src= {% static "/src/JScripts/gen_word_engine.js" %} defer> </script>
-    <script type="text/javascript" src= {% static "/src/JScripts/backgroundAnimation/B_canvas_settings.js" %} defer></script>
-    <script type="text/javascript" src= {% static "/src/JScripts/backgroundAnimation/B_constants.js" %} defer></script>
-    <script type="text/javascript" src= {% static "/src/JScripts/backgroundAnimation/B_engine.js" %} defer></script>
-    <link rel="stylesheet" href= {% static "/css/background.css" %}>
-    <link rel="stylesheet" href= {% static "/css/markingCP.css" %}>
+
+    <link rel="stylesheet" href= {% static "/css/markingPages.css" %}>
     <link rel="stylesheet" href= {% static "/css/navBar.css" %}>
     <link rel="stylesheet" href= {% static "/css/find.css" %}>
     <link rel="stylesheet" href= {% static "/css/cards.css" %}>
@@ -20,18 +17,16 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
-    <canvas id="background" width="800" height="600"></canvas>
-    <div id="marking">
-        <nav>
-            <a id="title" class="button" href={% url 'main' %}>Проекты ЧелГУ.</a>
-            <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'main' %}>Главная</a></button>
-            <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'completedProjects' %}>Выполненные проекты</a></button>
+    <header>
+        <h2 class="logo"><a id="title" class="button" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
+        <nav class="navigation">
+            <a href={% url 'main' %}>Главная</a>
+            <a href={% url 'completedProjects' %}>Выполненные проекты</a>
         </nav>
-
-        <input class="blurContainer" id="find" placeholder="Введите название проекта">
-
-        <div class="projectsSpace">
-            {% for card in cards %}
+    </header>
+    <input id="find-style-2" placeholder="Введите название проекта">
+    <section id="projects-space">
+        {% for card in cards %}
             <a href="cinema/{{card.comp_project_id}}" class="project">
                 <div class="front hFont">
                     {% if card.mediaExists %}
@@ -46,6 +41,5 @@
                 </div>
             </a>
             {% endfor %}
-        </div>
-    </div>
+    </section>
 {% endblock content %}
