--- a/Django/CSUProjects/templates/subProjects.html
+++ b/Django/CSUProjects/templates/subProjects.html
@@ -6,15 +6,11 @@
 
     <script type="text/javascript" src={% static "/src/JScripts/showSubscriptionForm.js" %} defer></script>
     <script type="text/javascript" src= {% static "/src/JScripts/gen_word_engine.js" %} defer></script>
-    <script type="text/javascript" src= {% static "/src/JScripts/backgroundAnimation/B_canvas_settings.js" %} defer></script>
-    <script type="text/javascript" src= {% static "/src/JScripts/backgroundAnimation/B_constants.js" %} defer></script>
-    <script type="text/javascript" src= {% static "/src/JScripts/backgroundAnimation/B_engine.js" %} defer></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js" defer></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js" defer></script>
 
     <link rel="stylesheet" href= {% static "/css/subscriptionForm.css" %}>
-    <link rel="stylesheet" href= {% static "/css/background.css" %}>
-    <link rel="stylesheet" href= {% static "/css/markingCP.css" %}>
+    <link rel="stylesheet" href= {% static "/css/markingPages.css" %}>
     <link rel="stylesheet" href= {% static "/css/navBar.css" %}>
     <link rel="stylesheet" href= {% static "/css/cards.css" %}>
     <link rel="stylesheet" href= {% static "/css/fonts.css" %}>
@@ -24,15 +20,17 @@
 {% endblock cssAndScripts %}
 
 {% block content %}
-    <canvas id="background" width="800" height="600"></canvas>
-    <div id="marking">
-        <nav>
-            <a id="title" class="button" href={% url 'main' %}>Проекты ЧелГУ.</a>
-            <button id="main" class="button blurContainer mFont" ><a href={% url 'main' %}>Главная</a></button>
-            <button id="completedProjects" class="button blurContainer mFont" ><a href={% url 'completedProjects' %}>Выполненные проекты</a></button>
+    <header>
+        <h2 class="logo"><a id="title" class="button" href={% url 'main' %}>Проекты ЧелГУ.</a></h2>
+        <nav class="navigation">
+            <a href={% url 'main' %}>Главная</a>
+            <a href={% url 'completedProjects' %}>Выполненные проекты</a>
         </nav>
+    </header>
 
-        <div class="projectsSpace">
+    <div id="marking">
+
+        <section id="projects-space">
             {% for card in cards %}
             <div class="project">
                 <div class="front hFont">{{card.subproject_name}}</div>
@@ -50,7 +48,7 @@
             </div>
             {% endfor %}
         </div>
-    </div>
+    </section>
 
     <div class="wrapper">
         <span class="icon-close">
@@ -60,17 +58,17 @@
             <h2>Записаться</h2>
             <form action="#">
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
+                    <span class="icon"><ion-icon name="add-circle"></ion-icon></span>
                     <input type="text" required>
                     <label for="">Имя</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
+                    <span class="icon"><ion-icon name="add-circle"></ion-icon></span>
                     <input type="text" required>
                     <label>Фамилия</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="checkmark-circle"></ion-icon></span>
+                    <span class="icon"><ion-icon name="add-circle"></ion-icon></span>
                     <input type="text" required>
                     <label>Группа</label>
                 </div>
@@ -80,7 +78,7 @@
                     <label>Почта</label>
                 </div>
                 <div class="input-box">
-                    <span class="icon"><ion-icon name="mail-open"></ion-icon></span>
+                    <span class="icon"><ion-icon name="add-circle"></ion-icon></span>
                     <input type="text" required>
                     <label>О себе</label>
                 </div>
